fix: adjust footer z-index to prevent overlap with search content on small screens style: correct code formating in temp span font size declaration

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,7 +269,7 @@ span.data-value {
   text-align: right;
 }
 
-.right-col #temp > span{
+.right-col #temp > span {
   font-size: 2.5rem;
 }
 
@@ -428,6 +428,10 @@ span.data-value {
 
 /* Footer GitHub icon */
 
-.bi-github {
+footer.fixed-bottom {
+  z-index: -1; /* prevent footer overlapping the search content for small screens */
+}
+
+footer .bi-github {
   font-size: 2rem;
 }
